# doca-flow-viz

./: .gitignore  README.md  counter_spy.cpp  counter_spy.h  main.c  meson.build  wrapper_decls.h  wrapper_init.c  wrappers.c
lib/: counter_spy.cpp  counter_spy.h  counter_spy_c.h  counter_spy_svc.cpp  counter_spy_svc.h  flow_viz.cpp  flow_viz.h  flow_viz_c.h  flow_viz_exporter.h  flow_viz_mermaid.cpp  flow_viz_mermaid.h  flow_viz_types.h  flow_viz_util.cpp  flow_viz_util.h  flow_viz_wrapper_decls.h  flow_viz_wrapper_init.c  flow_viz_wrappers.c  flow_viz_wrappers.cpp  meson.build  wrapper_decls.h  wrapper_init.c  wrappers.c
protos/: counter_spy.proto
test/: meson.build  sample_flow_program.c
ui/: .gitignore  counter_spy_gui.py  generate_grpc.sh  meson.build
